// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
Array [
  Array [
    "set-severity",
    Object {
      "currentTarget": Object {
        "blur": [Function],
      },
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": Object {
        "blur": [Function],
      },
    },
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<BubblePopupHelper
  isOpen={true}
  popup={
    <SetSeverityPopup
      issue={
        Object {
          "severity": "BLOCKER",
        }
      }
      onSelect={[Function]}
    />
  }
  position="bottomleft"
  togglePopup={[Function]}
>
  <button
    className="button-link issue-action issue-action-with-options js-issue-set-severity"
    onClick={[Function]}
  >
    <SeverityHelper
      className="issue-meta-label little-spacer-right"
      severity="BLOCKER"
    />
    <i
      className="little-spacer-left icon-dropdown"
    />
  </button>
</BubblePopupHelper>
`;

exports[`should render with the action 1`] = `
<BubblePopupHelper
  isOpen={false}
  popup={
    <SetSeverityPopup
      issue={
        Object {
          "severity": "BLOCKER",
        }
      }
      onSelect={[Function]}
    />
  }
  position="bottomleft"
  togglePopup={[Function]}
>
  <button
    className="button-link issue-action issue-action-with-options js-issue-set-severity"
    onClick={[Function]}
  >
    <SeverityHelper
      className="issue-meta-label little-spacer-right"
      severity="BLOCKER"
    />
    <i
      className="little-spacer-left icon-dropdown"
    />
  </button>
</BubblePopupHelper>
`;

exports[`should render without the action when the correct rights are missing 1`] = `
<SeverityHelper
  className="issue-meta-label"
  severity="BLOCKER"
/>
`;
